Fix menu width on mobile.

--- a/web/themes/custom/een/assets/src/sass/components/_header.scss
+++ b/web/themes/custom/een/assets/src/sass/components/_header.scss
@@ -128,7 +128,7 @@ header {
             flex-direction: column;
             align-items: flex-start;
             background-color: $secondary-color;
-            width: 80dvw;
+            width: 80%;
             height: 100dvh;
             top:0;
             right: -80%;
